fix:[step3] 45 자리 확인 로직에 버그 픽스 - 1~45를 표현하는 대상을 어떻게 더 분리할 수 있을까?